tests/semantic/fail/nil-3.tiger
let
	type a = array of int
	var b : a := nil
in
end
